--- a/config.json
+++ b/config.json
@@ -1,1 +1,9 @@
-{ "input_folder_path": "practicedata", "output_folder_path": "ingesteddata", "test_data_path": "testdata", "output_model_path": "practicemodels", "prod_deployment_path": "production_deployment"}
+{ 
+    "input_folder_path": "practicedata", 
+    "output_folder_path": "ingesteddata",
+    "output_data_file": "finaldata.csv",
+    "test_data_path": "testdata", 
+    "output_model_path": "practicemodels",
+    "output_model_file": "trainedmodel.pkl", 
+    "prod_deployment_path": "production_deployment"
+}
